# truetape64

./: .gitignore  README.md
Kicad/: C64.kicad_pcb  C64.kicad_prl  C64.kicad_pro  C64.kicad_sch
Kicad/LM2596/: YAAJ_DCDC_StepDown_LM2596.kicad_mod  yaaj_dcdc_stepdown_lm2596.dcm  yaaj_dcdc_stepdown_lm2596.lib
avr/: CMakeLists.txt  checksize.sh  flash.sh  main.c  main.h  msg.c  msg.h  msgbuffer.c  msgbuffer.h  msgqueue.c  msgqueue.h
cli/: .gitignore  README.md  main.py  setup.py
cli/truetape64cli/: __main__.py
truetape64cli/: .gitignore  README.md  setup.py
truetape64cli/truetape64cli/: __init__.py  __main__.py
